[tool.poetry]
name = "multi-feature-integration"
version = "0.1.0"
description = ""
authors = ["VIET-GITL <viet.info.43@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
deep-translator = "^1.11.4"
pyttsx3 = "^2.90"
gtts = "^2.5.1"
pygame = "^2.5.2"
langdetect = "^1.0.9"
pillow = "^10.3.0"
python-docx = "^1.1.2"
pandas = "^2.2.2"
pypdf2 = "^3.0.1"
python-pptx = "^0.6.23"
openpyxl = "^3.1.4"
matplotlib = "^3.9.0"
prettytable = "^3.10.0"
fastapi = "^0.111.0"
speechrecognition = "^3.10.4"
pyaudio = "^0.2.14"
setuptools = "^70.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
